# bookr

./: .gitignore  CMakeLists.txt  HELP.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.cpp
